fix widths and alignment on smaller views

--- a/less/waterbug.less
+++ b/less/waterbug.less
@@ -16,6 +16,10 @@
         overflow: hidden;
         padding: 55px 30px 0 30px;
     }
+
+    @media screen  and (max-width: 960px){
+        margin-top: 30px;
+    }
 }
 
 .controls {
@@ -48,6 +52,11 @@
 
 .controls-wrapper {
     padding-top: 0;
+
+    @media screen  and (max-width: 960px){
+        max-width: 640px;
+        margin: auto;
+    }
 
     input[type="file"] {
         font-family: @font-family;
@@ -160,8 +169,15 @@
     font-family: @condensed-font-family;
     color: @gray-light;
 
+    @media screen and (max-width: 960px){
+        width: 100%;
+        max-width: 640px;
+        margin: 10px auto 0;
+    }
+
     @media screen and (max-width: 699px){
-        padding-left: @grid-gutter-width;
+        padding-left: 60px;
+        max-width: 100%;
     }
 }
 
